# fastapi101

./: .aiignore  .gitignore  AGENTS.md  Dockerfile  README.md  TEST_STRATEGY.md  pyproject.toml
.codex/skills/review-implemented-plan/: SKILL.md
.codex/skills/review-implemented-plan/agents/: openai.yaml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: job_ci.yml  on_main.yml
.junie/: guidelines.md
app/: main.py
app/adapter/: config.py  kafka_adapter.py  mongo_adapter.py
app/domain/: errors.py  item_service.py  item_service_protocol.py
app/domain/model/: item.py  new_item.py
app/rest/: items_routes.py
app/rest/dto/: item_dto.py
scripts/: verify.py
scripts/docker/: docker-compose.yml  mongo-init.js
tests/: conftest.py  test_openapi.py
tests/adapter/: test_kafka_adapter.py  test_mongo_adapter.py  test_mongo_adapter_create_item.py  test_mongo_adapter_get_item.py
tests/componenttests/: test_component_item_create.py  test_component_item_get_single.py
tests/domain/: test_item_service_create_item.py  test_item_service_get_item.py
tests/rest/: test_items_route_post.py  test_items_route_single_get.py  test_items_single_get.py
tests/test/: id_generator_fixture.py  item_data.py  item_fixture.py
tests/test/mockserver/: kafka_test_consumer.py  kafka_test_container.py  mongodb_test_container.py
