[project]
name = "fastapi101"
version = "0.1.0"
description = "Simple FastAPI tutorial"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "Apache" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.116.1,<0.117.0)",
    "confluent-kafka (>=2.11.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "testcontainers[kafka]>=4.12.0",
    "ty>=0.0.1a19",
    "black>=24.8.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88
# Match the project's Python version
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
# You can add ignores here if needed
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["F401", "F811"]


[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html"
testpaths = ["tests"]
