[project]
name = "fastapi101"
version = "0.1.0"
description = "Simple FastAPI tutorial"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "Apache" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.129.0,<0.134.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "testcontainers[kafka, mongodb]>=4.14.1",
    "ty>=0.0.17",
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 88
# Match the project's Python version
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
# You can add ignores here if needed
ignore = []

[tool.ruff.lint.per-file-ignores]
# Test files often legitimately trigger F401 and F811:
# - F401 (unused imports): fixtures, parametrization, and side-effect imports are common in tests.
# - F811 (redefinition of unused name): pytest fixtures/parametrized tests redefine names across scopes.
# These ignores keep test code ergonomic while maintaining strict linting for application code.
"tests/**/*" = ["F401", "F811"]


[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers(\\.|$)",
]